crates/compiler/tests/snapshots/tokenizer_test__should_scan.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<![CDATA["

---
- Comment: "[CDATA["

