crates/compiler/tests/snapshots/tokenizer_test__should_scan_raw_text-2.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<style></styl"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: "</styl"

