crates/compiler/tests/snapshots/tokenizer_test__should_scan_raw_text-5.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<style></style>"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- EndTag: style

