crates/compiler/tests/snapshots/tokenizer_test__should_scan_raw_text-6.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<style>abc</style>"

---
- StartTag:
    name: style
    attributes: []
    self_closing: false
- Text: abc
- EndTag: style

